<resources>
    <string name="app_name">Calculadora</string>
    <string name="btnPorcen">%</string>
    <string name="btnRaiz">√</string>
    <string name="btnCuadrado">x²</string>
    <string name="btnUnox">1/x</string>
    <string name="btnCE">CE</string>
    <string name="btnC">C</string>
    <string name="btnAtras">⌫</string>
    <string name="btnDiv">/</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnMult">X</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnResta">-</string>
    <string name="btn3">3</string>
    <string name="btn2">2</string>
    <string name="btn1">1</string>
    <string name="btnSuma">+</string>
    <string name="btnMasMenos">±</string>
    <string name="btnCero">0</string>
    <string name="btnPunto">.</string>
    <string name="btnIgual">=</string>
</resources>