<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:backgroundTint="#B40A221F"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B7743A"
        android:onClick="MostrarTres"
        android:text="@string/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_6" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#B7743A"
        android:onClick="MostrarCero"
        android:text="@string/btnCero"
        app:layout_constraintStart_toEndOf="@+id/btn_Mas_Menos"
        app:layout_constraintTop_toBottomOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_Mas_Menos"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#B7743A"
        android:onClick="masMenos"
        android:text="@string/btnMasMenos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_Igual"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#B7743A"
        android:onClick="obtenerResultado"
        android:text="@string/btnIgual"
        app:layout_constraintStart_toEndOf="@+id/btn_punto"
        app:layout_constraintTop_toBottomOf="@+id/btn_Suma" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#B7743A"
        android:onClick="MostrarUno"
        android:text="@string/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_punto"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#B7743A"
        android:onClick="MostrarPunto"
        android:text="@string/btnPunto"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        app:layout_constraintTop_toBottomOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_Suma"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B7743A"
        android:onClick="Suma"
        android:text="@string/btnSuma"
        app:layout_constraintStart_toEndOf="@+id/btn_punto"
        app:layout_constraintTop_toBottomOf="@+id/btn_Resta" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B7743A"
        android:onClick="MostrarDos"
        android:text="@string/btn2"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B7743A"
        android:onClick="MostrarSeis"
        android:text="@string/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn_5"
        app:layout_constraintTop_toBottomOf="@+id/btn_9" />

    <Button
        android:id="@+id/btn_Resta"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B7743A"
        android:onClick="Resta"
        android:text="@string/btnResta"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btn_6"
        app:layout_constraintTop_toBottomOf="@+id/btn_Mult" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B7743A"
        android:onClick="MostrarCinco"
        android:text="@string/btn5"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        app:layout_constraintTop_toBottomOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B7743A"
        android:onClick="MostrarCuatro"
        android:text="@string/btn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B7743A"
        android:onClick="MostrarOcho"
        android:text="@string/btn8"
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        app:layout_constraintTop_toBottomOf="@+id/btn_CE" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B7743A"
        android:onClick="MostrarNueve"
        android:text="@string/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn_8"
        app:layout_constraintTop_toBottomOf="@+id/btn_BorrarUno" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B7743A"
        android:onClick="MostrarSiete"
        android:text="@string/btn7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_CE" />

    <Button
        android:id="@+id/btn_Mult"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#B7743A"
        android:onClick="multiplicacion"
        android:text="@string/btnMult"
        app:layout_constraintStart_toEndOf="@+id/btn_9"
        app:layout_constraintTop_toBottomOf="@+id/btn_Div" />

    <Button
        android:id="@+id/btn_CE"
        android:layout_width="186dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#673AB7"
        android:onClick="btnCe"
        android:text="@string/btnCE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Porcentaje" />

    <Button
        android:id="@+id/btn_BorrarUno"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#B7743A"
        android:onClick="btnregresar"
        android:text="@string/btnAtras"
        app:layout_constraintStart_toEndOf="@+id/btn_CE"
        app:layout_constraintTop_toBottomOf="@+id/btn_Cuadrado" />

    <Button
        android:id="@+id/btn_Div"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#B7743A"
        android:onClick="Division"
        android:text="@string/btnDiv"
        app:layout_constraintStart_toEndOf="@+id/btn_BorrarUno"
        app:layout_constraintTop_toBottomOf="@+id/btn_unox" />

    <EditText
        android:id="@+id/Caja_Principal"
        android:layout_width="339dp"
        android:layout_height="69dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="147dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="#887EF866"
        android:duplicateParentState="false"
        android:ems="10"
        android:enabled="false"

        android:inputType="text"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Porcentaje"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#B7743A"
        android:onClick="porcentaje"
        android:text="@string/btnPorcen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Caja_Principal" />

    <Button
        android:id="@+id/btn_RaizC"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#B7743A"
        android:onClick="raizC"
        android:text="@string/btnRaiz"
        app:layout_constraintStart_toEndOf="@+id/btn_Porcentaje"
        app:layout_constraintTop_toBottomOf="@+id/Caja_Principal" />

    <Button
        android:id="@+id/btn_Cuadrado"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#B7743A"
        android:onClick="potenciaC"
        android:text="@string/btnCuadrado"
        app:layout_constraintStart_toEndOf="@+id/btn_RaizC"
        app:layout_constraintTop_toBottomOf="@+id/Caja_Principal" />

    <Button
        android:id="@+id/btn_unox"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#B7743A"
        android:onClick="btn1x"
        android:text="@string/btnUnox"
        app:layout_constraintStart_toEndOf="@+id/btn_Cuadrado"
        app:layout_constraintTop_toBottomOf="@+id/Caja_Principal" />

</androidx.constraintlayout.widget.ConstraintLayout>